# SDL-GameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: level1.txt
include/: Game.hpp  GameObject.hpp  Map.hpp  TextureManager.hpp  game.h  game_object.h  map.h  texture_manager.h
src/: Game.cpp  GameObject.cpp  Map.cpp  TextureManager.cpp  game.cc  game_object.cc  main.cc  main.cpp  map.cc  texture_manager.cc
